--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
+    "lodash.merge": "^4.6.1",
     "mustache-loader": "^1.4.0",
     "qrcode": "^1.2.0",
     "style-loader": "^0.20.1",
