--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "dependencies": {},
   "devDependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@fortawesome/vue-fontawesome": "^0.1.0",
     "@ledgerhq/hw-app-str": "^4.19.0",
     "@ledgerhq/hw-transport-node-hid": "^4.19.1",
@@ -54,6 +54,7 @@
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "filemanager-webpack-plugin": "^1.0.27",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
