--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "lodash.clone": "^4.5.0",
     "lodash.merge": "^4.6.1",
     "moment": "^2.22.2",
     "nightwatch": "^1.0.6",
