--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
+    "jsdoc": "jsdoc dist/stellar-checkout.min.js --destination docs/StellarCheckout/",
     "build": "node build/build.js"
   },
   "dependencies": {},
@@ -59,6 +60,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "jsdoc": "^3.5.5",
     "lodash.clone": "^4.5.0",
     "lodash.merge": "^4.6.1",
     "moment": "^2.22.2",
