--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "jsdoc": "^3.5.5",
+    "lodash-es": "^4.17.10",
     "lodash.clone": "^4.5.0",
     "lodash.merge": "^4.6.1",
-    "minami": "^1.2.3",
     "moment": "^2.22.2",
     "nightwatch": "^1.0.6",
     "node-notifier": "^5.1.2",
